package org.example;

import org.example.Main;

public class AppLauncher {
    public static void main(String[] args) {
        Main.main(args);
    }
}
