package org.example.staticValue;

public class CalculatorSize{
    public static final double width = 480;
    public static final double height = 690;
}